examples/pts/neg/operation.effekt
module examples/pts/neg/operation

effect Test {
    def output(x: Int): Int / _
}

def main() = {
    ()
}